# formation-control-newboard

./: F407_FC.uvguix.ErDou  README.md  TEST.ANO
formation_control_firmware/applications/: rc.c
formation_control_ros/: readme.md
formation_control_ros/driver/libcam/: Makefile
formation_control_ros/formation_control/: CMakeLists.txt  package.xml
formation_control_ros/formation_control/launch/: formation.launch
formation_control_ros/formation_control/src/: main.cpp
formation_control_ros/formation_trajectory/: CMakeLists.txt  package.xml
formation_control_ros/formation_trajectory/include/: traj.h
formation_control_ros/formation_trajectory/src/: cicle1.cpp  cicle2.cpp  collaborate.cpp  main.cpp
formation_control_ros/uav_driver_serial/: CMakeLists.txt  package.xml
formation_control_ros/uav_driver_serial/include/: serial.h
formation_control_ros/uav_driver_serial/src/: main.cpp  serial.cpp
formation_control_ros/uav_localization/: CMakeLists.txt  package.xml
formation_control_ros/uav_localization/src/: main.cpp
formation_control_ros/uav_msg/: CMakeLists.txt  package.xml
formation_control_ros/uav_msg/msg/: uav_information.msg
formation_control_ros/uav_position_control/: CMakeLists.txt  package.xml
formation_control_ros/uav_position_control/launch/: arpilot.launch
formation_control_ros/uav_position_control/src/: main.cpp
formation_control_ros/uav_proto_pack/: CMakeLists.txt  package.xml
formation_control_ros/uav_proto_pack/src/: main.cpp
formation_control_ros/uav_proto_unpack/: CMakeLists.txt  package.xml
formation_control_ros/uav_proto_unpack/src/: main.cpp
